[gd_scene load_steps=8 format=3 uid="uid://ddb2u65x2raxd"]

[ext_resource type="Script" uid="uid://bjfuiwgyely5d" path="res://Script/quiz_scene.gd" id="1_jldtv"]
[ext_resource type="Texture2D" uid="uid://cs2am3h6pohdk" path="res://assests/Img/bg.png" id="2_myhem"]
[ext_resource type="Texture2D" uid="uid://4ievt637gl0w" path="res://assests/Img/Group 51.png" id="3_hi8jm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myhem"]
bg_color = Color(0, 0.643137, 0.560784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hi8jm"]
bg_color = Color(0, 0.643137, 0.560784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73tjt"]
bg_color = Color(2.5028e-06, 0.642659, 0.562207, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahi50"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Quiz" type="Node2D"]
script = ExtResource("1_jldtv")

[node name="Quiz" type="CanvasLayer" parent="."]

[node name="Bg" type="Sprite2D" parent="Quiz"]
texture_filter = 1
position = Vector2(642, 345)
scale = Vector2(0.323454, 0.305297)
texture = ExtResource("2_myhem")

[node name="Pertanyaan" type="Label" parent="Quiz"]
offset_left = 493.0
offset_top = 150.0
offset_right = 774.0
offset_bottom = 192.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Contoh pertanyaan"

[node name="Jawaban" type="Label" parent="Quiz"]
offset_left = 588.0
offset_top = 528.0
offset_right = 671.0
offset_bottom = 556.0
theme_override_font_sizes/font_size = 20
text = "Jawaban"

[node name="VBoxContainer" type="VBoxContainer" parent="Quiz"]
offset_left = 394.0
offset_top = 330.0
offset_right = 486.0
offset_bottom = 396.0
scale = Vector2(1.5, 1.5)

[node name="Jawaban 1" type="Button" parent="Quiz/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_myhem")
text = "Jawaban 1
"

[node name="Jawaban 2" type="Button" parent="Quiz/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hi8jm")
text = "Jawaban  2"

[node name="VBoxContainer2" type="VBoxContainer" parent="Quiz"]
offset_left = 782.0
offset_top = 335.0
offset_right = 874.0
offset_bottom = 401.0
scale = Vector2(1.5, 1.5)

[node name="Jawaban 3" type="Button" parent="Quiz/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_73tjt")
text = "Jawaban 3"

[node name="ExitScene" type="Button" parent="Quiz"]
texture_filter = 1
offset_left = 1062.0
offset_top = 77.0
offset_right = 1246.0
offset_bottom = 261.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 35
theme_override_icons/icon = ExtResource("3_hi8jm")
theme_override_styles/normal = SubResource("StyleBoxFlat_ahi50")

[connection signal="pressed" from="Quiz/VBoxContainer/Jawaban 1" to="." method="_on_jawaban_1_pressed"]
[connection signal="pressed" from="Quiz/VBoxContainer/Jawaban 2" to="." method="_on_jawaban_2_pressed"]
[connection signal="pressed" from="Quiz/VBoxContainer2/Jawaban 3" to="." method="_on_jawaban_3_pressed"]
[connection signal="pressed" from="Quiz/ExitScene" to="." method="_on_exit_scene_pressed"]
